Fixed permalinks, embedded About Me on the homepage, and other fixes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,15 +25,30 @@ layout: default
 <main class="home" id="main" role="main" aria-label="Content">
 
   <h1 class="content-title divided">
+    About Me
+  </h1>
+
+
+  {% for page in site.pages %}
+  {% if page.name == "about.md" %}
+
+  {{ page.excerpt }}
+  <a href="{{ page.url }}">Read More</a>
+
+  {% endif %}
+  {% endfor %}
+
+
+  <h1 class="content-title divided">
     {% if site.paginate and site.paginate_path and paginator.page > 1 %}
       Page {{ paginator.page }}
     {% else %}
-      Contents
+      Blog posts
     {% endif %}
   </h1>
 
   {% if site.paginate and site.paginate_path %}
-    
+
     <ul class="post-list">
       {% for post in paginator.posts %}
         {% include post-list-item.html %}
@@ -65,8 +80,8 @@ layout: default
         {% include post-list-item.html %}
       {% endfor %}
     </ul>
-  
+
   {% endif %}
-    
+
 
 </main>
