Add copyright and social links to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,5 +37,12 @@
       </aside>
     {% endunless %}
 
+    <aside class="site-credits">
+      <p>
+        {% include footer.html %}
+      </p>
+    </aside>
+
+
   </body>
 </html>
