--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,7 @@
-$brand-color:         #F3AC47;
+$brand-color:         #F2EBE2;
 $highlight:           lighten($brand-color, 35%);
 $text-color:          #0b0404;
-$muted-text-color:    #24342F;
+$muted-text-color:    #e8bd30;
 $font-family:         "EB Garamond", Garamond, "Times New Roman", serif;
 
 $on-bigphone:         375px;
