Fix hyperlinks for github pages: remove trailing slash.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ layout: default
 <main class="home" id="main" role="main" aria-label="Content">
 
   <h1 class="content-title divided">
-    About Me
+    Introduction
   </h1>
 
   {% for page in site.pages %}
