--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,3 +1,5 @@
+// This is a SCSS file that I added and customised myself (CG, 08-2022).
+
 .row {
   /* We first create a flex layout context */
   display: flex;
