--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,6 +6,16 @@ body {
   line-height: 1.5;
 }
 
+@media (prefers-color-scheme: dark) {
+	body {
+    background: $brand-color-dark;
+    color: $text-color-dark;
+    font-family: $font-family;
+    font-size: 1.3125em;
+    line-height: 1.5;
+	}
+}
+
 h1 {
   font-size: 3em;
   margin: .5em auto;
