--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,9 @@
-$brand-color:         #F2EBE2;
+$brand-color:         #F2EBE2;  // Beige
+$brand-color-dark:    #333;     // And 444 for the blog posts
 $highlight:           lighten($brand-color, 35%);
-$text-color:          #0b0404;
-$muted-text-color:    #e8bd30;
+$text-color:          #0b0404;  // Brownish
+$text-color-dark:     #bbb;     // Greyish
+$muted-text-color:    #e8bd30;  // Yellow
 $font-family:         "EB Garamond", Garamond, "Times New Roman", serif;
 
 $on-bigphone:         375px;
@@ -11,9 +13,8 @@ $on-desktop:          1200px;
 
 // Dark green: 24342F
 // Dark yellow: F3AC47
+// Beige: F2EBE2
+
 
 // Lighter green: 64644B (default muted-text-color)
 // Brown: 0b0404 (default text-color)
-
-// Testing some colour pallettes
-// Beige: D7CEC7
