Take out e-mail address. To be replaced with contact form.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
   </ul>
 
 <div class="row">
-      <a href="mailto:contact@colinganzevoort.nl?subject=Website">
+      <a href="#">
         <img src="/assets/images/icon-mail.png" alt="Mail" width="25" height="25"></a>
      <a href="https://www.linkedin.com/in/colinganzevoort/" target="_blank">
        <img src="/assets/images/icon-linkedin.png" alt="LinkedIn" width="25" height="25"></a>
