--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -4,5 +4,14 @@
   width: 152px;
   height: 12px;
   margin: .5em auto 0;
-  background: url(#{$asset_url}/images/divider.svg) no-repeat top center;
+  background: url(#{$asset_url}/images/divider-yellow.svg) no-repeat top center;
+}
+
+@mixin divider-darkmode {
+  border: 0;
+  display: block;
+  width: 152px;
+  height: 12px;
+  margin: .5em auto 0;
+  background: url(#{$asset_url}/images/divider-yellow.svg) no-repeat top center;
 }
