--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -88,6 +88,7 @@ a:focus {
 blockquote {
   margin: 2em auto;
   opacity: .8;
+  font-style: italic;
   > * {
     padding: 0 3em;
   }
@@ -110,7 +111,7 @@ hr {
   border: 0;
   height: 0;
   @include divider;
-  margin: 4em 0;
+  margin: 4em auto; // https://github.com/patdryburgh/hitchens/pull/25/commits/15fe54bae2daa4501e8dd17469462599fa499f34
 }
 
 // Added from https://derekkedziora.com/blog/dark-mode-revisited
@@ -119,7 +120,7 @@ hr {
     border: 0;
     height: 0;
     @include divider-darkmode;
-    margin: 4em 0;
+    margin: 4em auto;
   }
 }
 
@@ -202,3 +203,11 @@ figcaption {
     margin-top: 0;
   }
 }
+
+// Added on 27-08-2022
+p.dropcap::first-letter {
+      float: left;
+      font-size: 5em;
+      margin: 0 .1em 0 0;
+      line-height: 0.85;
+    }
