Fix glitches. Add dark mode to code blocks.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
       </h1>
     {% endif %}
 
-    {% if site.title %}
+    {% if site.description %}
       <h2>
         {{ site.description }}
       </h2>
