--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,28 +5,22 @@
   </ul>
 
 <div class="row">
-    <a href="#"><picture>
+    <a href="mailto:{{ site.email | encode_email }}"><picture>
       <source srcset="/assets/images/icon-mail-darkmode.png" media="(prefers-color-scheme: dark)">
         <img src="/assets/images/icon-mail.png" alt="Mail" width="25" height="25">
     </picture></a>
 
-    <a href="https://www.linkedin.com/in/colinganzevoort/" target="_blank""><picture>
+    <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}/" target="_blank""><picture>
       <source srcset="/assets/images/icon-linkedin-darkmode.png" media="(prefers-color-scheme: dark)">
         <img src="/assets/images/icon-linkedin.png" alt="LinkedIn" width="25" height="25">
     </picture></a>
 
-    <a href="https://twitter.com/colinowg/" target="_blank"><picture>
+    <a href="https://twitter.com/{{ site.twitter_username }}/" target="_blank"><picture>
       <source srcset="/assets/images/icon-twitter-darkmode.png" media="(prefers-color-scheme: dark)">
         <img src="/assets/images/icon-twitter.png" alt="Twitter" width="25" height="25">
     </picture></a>
 
  </div>
-
-  <!-- <a href="https://www.linkedin.com/in/colinganzevoort/" target="_blank">
-    <img src="/assets/images/icon-linkedin.png" alt="LinkedIn" width="25" height="25"></a>
-
-    <a href="https://www.linkedin.com/in/colinganzevoort/" target="_blank">
-      <img src="/assets/images/icon-twitter.png" alt="LinkedIn" width="25" height="25"></a> -->
 
 ©
 <script type="text/javascript">
