--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,23 @@
 ---
-layout: post
+layout: default
 ---
 
-{{ content }}
+{% if site.data.menu %}
+  {% include menu.html %}
+{% else %}
+  {% include back-link.html %}
+{% endif %}
+
+<article class="post h-entry" itemscope itemtype="https://schema.org/BlogPosting" id="main" role="article" aria-label="Content">
+
+  {% if page.title != "" %}
+  <h1 class="post-title divided p-name" itemprop="name headline">
+      {{ page.title }}
+  </h1>
+  {% endif %}
+
+  <div class="post-content e-content" itemprop="articleBody">
+    {{ content }}
+  </div>
+
+</article>
