--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,9 @@
 
     <link rel="favicon" href="{{ site.icon }}">
 
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152-precomposed.png" />
+
     {%- if jekyll.environment == 'production' -%}
       <script async defer data-website-id="c3f89d49-ef3d-4d13-868f-a4a457433514" src="https://umami.colinganzevoort.nl/umami.js"></script>
     {%- endif -%}
