--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,6 +44,20 @@ layout: default
     <time class="post-date dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" }}</time>
   </div>
 
+  <!-- https://www.bytedude.com/jekyll-previous-and-next-posts/ -->
+  <div class="post-nav">
+  <p>
+    {% if page.previous.url %}
+    <a href="{{page.previous.url}}">&#8672;&nbsp;{{page.previous.title}}</a>
+    {% endif %}
+  </p>
+  <p>
+    {% if page.next.url %}
+    <a href="{{page.next.url}}">{{page.next.title}}&nbsp;&#8674;</a>
+    {% endif %}
+  </p>
+</div>
+
   {% if site.disqus.shortname %}
     {% include disqus-comments.html %}
   {% endif %}
