--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -79,3 +79,24 @@
   text-decoration: none;
   text-transform: uppercase;
 }
+
+.post-nav {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.post-nav p {
+    flex: 1 1 0;
+    width: 45%;
+    font-size: .8em
+}
+
+.post-nav p:first-child {
+    padding-right: 0.5em;
+}
+
+.post-nav p:last-child {
+    padding-left: 0.5em;
+    text-align: right;
+}
