--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -210,6 +210,7 @@ p.dropcap::first-letter {
       font-size: 5em;
       margin: 0 .1em 0 0;
       line-height: 0.85;
+      // color: $muted-text-color
     }
 
 // Estimated Reading Time
