--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -26,7 +26,8 @@
 .post > h1 {
   font-size: 2em;
   max-width: 48rem;
-  padding: 2em 1em;
+  padding: 2em 1em .75em;
+  // padding: 2em 1em;
   text-align: center;
 }
 
