--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,7 +41,8 @@ layout: default
 
   <h1 class="content-title divided">
     {% if site.paginate and site.paginate_path and paginator.page > 1 %}
-      Page {{ paginator.page }}
+      <!-- Page {{ paginator.page }} -->
+      Blog posts
     {% else %}
       Blog posts
     {% endif %}
