--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,8 +1,8 @@
 body {
   background: $brand-color;
   color: $text-color;
-  font-family: $font-family;
-  font-size: 1.3125em;
+  font-family: $body-font-family;
+  font-size: $body-font-size;
   line-height: 1.5;
 }
 
@@ -11,8 +11,8 @@ body {
 	body {
     background: $brand-color-dark;
     color: $text-color-dark;
-    font-family: $font-family;
-    font-size: 1.3125em;
+    font-family: $body-font-family;
+    font-size: $body-font-size;
     line-height: 1.5;
 	}
 }
@@ -20,12 +20,14 @@ body {
 h1 {
   font-size: 3em;
   margin: .5em auto;
+  font-family: $headings-font-family;
 }
 
 h2 {
   font-size: 2em;
   margin: 1em auto;
   text-align: center;
+  font-family: $headings-font-family;
 }
 
 h3 {
@@ -33,6 +35,7 @@ h3 {
   // margin: 1px auto;
   margin: 1.3333em auto;
   text-align: center;
+  font-family: $headings-font-family;
 }
 
 h4 {
@@ -40,6 +43,7 @@ h4 {
   font-style: italic;
   margin: 1.875em auto;
   text-align: center;
+  font-family: $headings-font-family;
 }
 
 h5 {
@@ -47,6 +51,7 @@ h5 {
   font-style: italic;
   margin: 2em auto;
   text-align: center;
+  font-family: $headings-font-family;
 }
 
 h6 {
@@ -54,6 +59,7 @@ h6 {
   font-style: italic;
   margin: 2.25em auto;
   text-align: center;
+  font-family: $headings-font-family;
 }
 
 em {
@@ -62,6 +68,7 @@ em {
 
 strong {
   font-weight: bold;
+  font-family: $headings-font-family;
 }
 
 a {
@@ -101,6 +108,7 @@ blockquote.epigraph {
 
 small {
   font-size: .75em;
+  font-family: $headings-font-family;
 }
 
 p > cite {
@@ -142,6 +150,7 @@ figcaption {
   text-align: center;
   margin-bottom: 2em;
   opacity: .7;
+  font-family: $headings-font-family;
 }
 
 .divided::after {
