--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     {% if site.description %}<meta name="description" content="{{ site.description }}">{% endif %}
 
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | absolute_url }}?{{ site.time | date: '%s%N' }}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display">
 
     <link rel="favicon" href="{{ site.icon }}">
 
