Add event for CV click and for LinkedIn click

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,7 +6,7 @@ $highlight:            lighten($brand-color, 35%);
 $highlight-dark:       #444;
 $text-color:           #0b0404;  // Brownish
 $text-color-dark:      #bbb;     // Greyish
-$muted-text-color:     #E8BD30;  // Yellow
+$muted-text-color:     #E8BD30;  // My Yellow Brand Color
 $headings-font-family: "Playfair Display", Garamond, "Times New Roman", serif;
 $body-font-family:     "EB Garamond", Garamond, "Times New Roman", serif;
 
