Add mastodon to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,6 +20,11 @@
         <img src="/assets/images/icon-twitter.png" alt="Twitter" width="25" height="25">
     </picture></a>
 
+    <a rel="me" href="{{ site.mastodon_url }}" target="_blank"><picture>
+      <source srcset="/assets/images/icon-mastodon-darkmode.png" media="(prefers-color-scheme: dark)">
+        <img src="/assets/images/icon-mastodon.png" alt="Twitter" width="25" height="25">
+    </picture></a>
+
  </div>
 
 ©
