Accommodate Umami 2.0 update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152-precomposed.png" />
 
     {%- if jekyll.environment == 'production' -%}
-      <script async defer data-website-id="c3f89d49-ef3d-4d13-868f-a4a457433514" src="https://umami.colinganzevoort.nl/umami.js"></script>
+      <script async defer data-website-id="c3f89d49-ef3d-4d13-868f-a4a457433514" src="https://umami.colinganzevoort.nl/script.js"></script>
     {%- endif -%}
 
   </head>
