--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,10 +15,10 @@
         <img src="/assets/images/icon-linkedin.png" alt="LinkedIn" width="25" height="25">
     </picture></a>
 
-    <a rel="me" href="{{ site.mastodon_url }}" target="_blank" data-umami-event="Open Mastodon"><picture>
+    <!-- <a rel="me" href="{{ site.mastodon_url }}" target="_blank" data-umami-event="Open Mastodon"><picture>
       <source srcset="/assets/images/icon-mastodon-darkmode.png" media="(prefers-color-scheme: dark)">
         <img src="/assets/images/icon-mastodon.png" alt="Twitter" width="25" height="25">
-    </picture></a>
+    </picture></a> -->
 
     <a href="https://twitter.com/{{ site.twitter_username }}/" target="_blank" data-umami-event="Open Twitter"><picture>
       <source srcset="/assets/images/icon-twitter-darkmode.png" media="(prefers-color-scheme: dark)">
